objects/Release_Doc__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Release Docs</relationshipLabel>
        <relationshipName>Release_Docs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apple_Developer_Expiry__c</fullName>
        <label>Apple Developer Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apple_Developer_Portal_Certificate_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid distribution certificate on file ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apple_Developer_Portal_Password__c</fullName>
        <label>Apple Developer Portal Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apple_Developer_Portal_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apple_Developer_Portal_Username__c</fullName>
        <label>Apple Developer Portal Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apple_Distribution_Certificate_Expiry__c</fullName>
        <label>Distribution Certificate Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Play_Password__c</fullName>
        <label>Google Play Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Play_Username__c</fullName>
        <label>Google Play Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Company_Name__c</fullName>
        <label>Legacy Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Migrated_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy Migrated ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <label>Metadata</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Release_Doc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional reference to a parent Release Doc</description>
        <label>Parent Release Doc</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Release_Doc__c.Parent_Release_Doc__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Release_Doc__c.Account__r.ParentId</field>
                <operation>equals</operation>
                <valueField>Release_Doc__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Release_Doc__c</referenceTo>
        <relationshipLabel>Release Docs</relationshipLabel>
        <relationshipName>Release_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Release Docs</relationshipLabel>
        <relationshipName>Release_Docs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iTunes_Connect_Password__c</fullName>
        <label>iTunes Connect Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iTunes_Connect_Username__c</fullName>
        <label>iTunes Connect Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iTunes_Credentials_Owner__c</fullName>
        <label>iTunes Credentials Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release Doc</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Release Doc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>